--- a/ProfileManifest/com.secondsonconsulting.baseline.plist
+++ b/ProfileManifest/com.secondsonconsulting.baseline.plist
@@ -127,6 +127,66 @@ A profile can consist of payloads with different version numbers. For example, c
 		</dict>
 		<dict>
 			<key>pfm_description</key>
+			<string>These are the first items processed by Baseline, immediately when a user logs in.</string>
+			<key>pfm_name</key>
+			<string>InitialScripts</string>
+			<key>pfm_subkeys</key>
+			<array>
+				<dict>
+					<key>pfm_subkeys</key>
+					<array>
+						<dict>
+							<key>pfm_description</key>
+							<string>The name you want to appear in the SwiftDialog menu as this script is run.</string>
+							<key>pfm_name</key>
+							<string>DisplayName</string>
+							<key>pfm_title</key>
+							<string>Display Name</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>A path to the script you want to run. Can be a local file path or a URL.</string>
+							<key>pfm_name</key>
+							<string>ScriptPath</string>
+							<key>pfm_title</key>
+							<string>Script Path</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>The expected MD5 of the script being run.</string>
+							<key>pfm_name</key>
+							<string>MD5</string>
+							<key>pfm_title</key>
+							<string>MD5</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>Arguments you want to pass to the script when it is run.</string>
+							<key>pfm_name</key>
+							<string>Arguments</string>
+							<key>pfm_title</key>
+							<string>Arguments</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+					</array>
+					<key>pfm_type</key>
+					<string>dictionary</string>
+				</dict>
+			</array>
+			<key>pfm_title</key>
+			<string>InitialScripts</string>
+			<key>pfm_type</key>
+			<string>array</string>
+		</dict>
+		<dict>
+			<key>pfm_description</key>
 			<string>Populate with Installomator labels you wish Baseline to process when it runs.</string>
 			<key>pfm_name</key>
 			<string>Installomator</string>
@@ -304,6 +364,16 @@ A profile can consist of payloads with different version numbers. For example, c
 			<string>Scripts</string>
 			<key>pfm_type</key>
 			<string>array</string>
+		</dict>
+		<dict>
+			<key>pfm_name</key>
+			<string>Restart</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
+			<key>pfm_title</key>
+			<string>Restart</string>
+			<key>pfm_description</key>
+			<string>This setting controls whether Baseline forces a restart after completion. Default is true.</string>
 		</dict>
 	</array>
 	<key>pfm_targets</key>
