--- a/ProfileManifest/com.secondsonconsulting.baseline.plist
+++ b/ProfileManifest/com.secondsonconsulting.baseline.plist
@@ -366,14 +366,38 @@ A profile can consist of payloads with different version numbers. For example, c
 			<string>array</string>
 		</dict>
 		<dict>
+			<key>pfm_description</key>
+			<string>This setting controls whether Baseline forces a restart after completion. Default is true.</string>
 			<key>pfm_name</key>
+			<string>Restart</string>
+			<key>pfm_title</key>
 			<string>Restart</string>
 			<key>pfm_type</key>
 			<string>boolean</string>
+		</dict>
+		<dict>
+			<key>pfm_name</key>
+			<string>DialogListOptions</string>
 			<key>pfm_title</key>
-			<string>Restart</string>
-			<key>pfm_description</key>
-			<string>This setting controls whether Baseline forces a restart after completion. Default is true.</string>
+			<string>Dialog List Window Options</string>
+			<key>pfm_type</key>
+			<string>string</string>
+		</dict>
+		<dict>
+			<key>pfm_name</key>
+			<string>DialogSuccessOptions</string>
+			<key>pfm_title</key>
+			<string>Dialog Success Window Options</string>
+			<key>pfm_type</key>
+			<string>string</string>
+		</dict>
+		<dict>
+			<key>pfm_name</key>
+			<string>DialogFailureOptions</string>
+			<key>pfm_title</key>
+			<string>Dialog Failure Window Options</string>
+			<key>pfm_type</key>
+			<string>string</string>
 		</dict>
 	</array>
 	<key>pfm_targets</key>
