--- a/ProfileManifest/com.secondsonconsulting.baseline.plist
+++ b/ProfileManifest/com.secondsonconsulting.baseline.plist
@@ -207,6 +207,16 @@ A profile can consist of payloads with different version numbers. For example, c
 						</dict>
 						<dict>
 							<key>pfm_description</key>
+							<string>The icon you want to appear in the SwiftDialog menu as this Installomator label is processed. Can be a URL or local file path.</string>
+							<key>pfm_name</key>
+							<string>Icon</string>
+							<key>pfm_title</key>
+							<string>Icon</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
 							<string>The Installomator label.</string>
 							<key>pfm_name</key>
 							<string>Label</string>
@@ -252,6 +262,16 @@ A profile can consist of payloads with different version numbers. For example, c
 							<string>DisplayName</string>
 							<key>pfm_title</key>
 							<string>Display Name</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>The icon you want to appear in the SwiftDialog menu as this package is installed. Can be a URL or local file path.</string>
+							<key>pfm_name</key>
+							<string>Icon</string>
+							<key>pfm_title</key>
+							<string>Icon</string>
 							<key>pfm_type</key>
 							<string>string</string>
 						</dict>
@@ -322,6 +342,16 @@ A profile can consist of payloads with different version numbers. For example, c
 							<string>DisplayName</string>
 							<key>pfm_title</key>
 							<string>Display Name</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>The icon you want to appear in the SwiftDialog menu as this script is run. Can be a URL or local file path.</string>
+							<key>pfm_name</key>
+							<string>Icon</string>
+							<key>pfm_title</key>
+							<string>Icon</string>
 							<key>pfm_type</key>
 							<string>string</string>
 						</dict>
