--- a/ProfileManifest/com.secondsonconsulting.baseline.plist
+++ b/ProfileManifest/com.secondsonconsulting.baseline.plist
@@ -417,6 +417,16 @@ A profile can consist of payloads with different version numbers. For example, c
 		</dict>
 		<dict>
 			<key>pfm_description</key>
+			<string>This setting controls whether Baseline uses the SwiftDialog --blurscreen feature. Default is true. If you set to false, consider using --ontop in your DialogListOptions key</string>
+			<key>pfm_name</key>
+			<string>BlurScreen</string>
+			<key>pfm_title</key>
+			<string>Blur Screen</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
+		</dict>
+		<dict>
+			<key>pfm_description</key>
 			<string>This setting controls whether Baseline displays a progress bar. Default is false.</string>
 			<key>pfm_name</key>
 			<string>ProgressBar</string>
@@ -442,6 +452,26 @@ A profile can consist of payloads with different version numbers. For example, c
 			<string>CleanupAfterUse</string>
 			<key>pfm_title</key>
 			<string>Cleanup After Use</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
+		</dict>
+		<dict>
+			<key>pfm_description</key>
+			<string>This setting controls whether Baseline will reinstall SwiftDialog as the final step before completion. Default behavior if this key is omitted will reinstall SwiftDialog if a custom PNG is found in /Library/Application Support/Dialog/Dialog.png.</string>
+			<key>pfm_name</key>
+			<string>ReinstallDialog</string>
+			<key>pfm_title</key>
+			<string>Reinstall SwiftDialog</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
+		</dict>
+		<dict>
+			<key>pfm_description</key>
+			<string>This setting enables SwiftDialog "Button 1" (the OK button) on the Baseline List View. This allows users to dismiss the list view and continue working while Baseline runs. By default this button is disabled.</string>
+			<key>pfm_name</key>
+			<string>Button1Enabled</string>
+			<key>pfm_title</key>
+			<string>Button 1 Enabled</string>
 			<key>pfm_type</key>
 			<string>boolean</string>
 		</dict>
