--- a/ProfileManifest/com.secondsonconsulting.baseline.plist
+++ b/ProfileManifest/com.secondsonconsulting.baseline.plist
@@ -467,6 +467,16 @@ A profile can consist of payloads with different version numbers. For example, c
 		</dict>
 		<dict>
 			<key>pfm_description</key>
+			<string>By default, Baseline uses "NOTIFY=silent" and "BLOCKING_PROCESS_ACTION=kill" Installomator options. Setting this to True means Baseline will not use those options.</string>
+			<key>pfm_name</key>
+			<string>IgnoreDefaultInstallomatorOptions</string>
+			<key>pfm_title</key>
+			<string>Ignore Default Installomator Options</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
+		</dict>
+		<dict>
+			<key>pfm_description</key>
 			<string>This setting enables SwiftDialog "Button 1" (the OK button) on the Baseline List View. This allows users to dismiss the list view and continue working while Baseline runs. By default this button is disabled.</string>
 			<key>pfm_name</key>
 			<string>Button1Enabled</string>
@@ -512,6 +522,16 @@ A profile can consist of payloads with different version numbers. For example, c
 			<string>ExitCondition</string>
 			<key>pfm_title</key>
 			<string>Exit Condition</string>
+			<key>pfm_type</key>
+			<string>string</string>
+		</dict>
+		<dict>
+			<key>pfm_description</key>
+			<string>Define a file path. If this file exists at any point while Baseline is running, Baseline will exit and will not process additional items.</string>
+			<key>pfm_name</key>
+			<string>BailOutFile</string>
+			<key>pfm_title</key>
+			<string>Bail Out File</string>
 			<key>pfm_type</key>
 			<string>string</string>
 		</dict>
