--- a/ProfileManifest/com.secondsonconsulting.baseline.plist
+++ b/ProfileManifest/com.secondsonconsulting.baseline.plist
@@ -467,6 +467,16 @@ A profile can consist of payloads with different version numbers. For example, c
 		</dict>
 		<dict>
 			<key>pfm_description</key>
+			<string>Tell Installomator to use it's built in SwiftDialog integration for the List View. Default is false.</string>
+			<key>pfm_name</key>
+			<string>InstallomatorSwiftDialogIntegration</string>
+			<key>pfm_title</key>
+			<string>Use Installomator SwiftDialog Integration</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
+		</dict>
+		<dict>
+			<key>pfm_description</key>
 			<string>By default, Baseline uses "NOTIFY=silent" and "BLOCKING_PROCESS_ACTION=kill" Installomator options. Setting this to True means Baseline will not use those options.</string>
 			<key>pfm_name</key>
 			<string>IgnoreDefaultInstallomatorOptions</string>
