--- a/ExampleConfigurationFiles/BaselineConfig.plist
+++ b/ExampleConfigurationFiles/BaselineConfig.plist
@@ -19,9 +19,9 @@
 	<array>
 		<dict>
 			<key>DisplayName</key>
-			<string>Google Chrome</string>
+			<string>Firefox</string>
 			<key>Label</key>
-			<string>googlechromepkg</string>
+			<string>firefoxpkg</string>
 		</dict>
 		<dict>
 			<key>DisplayName</key>
