--- a/ProfileManifest/com.secondsonconsulting.baseline.plist
+++ b/ProfileManifest/com.secondsonconsulting.baseline.plist
@@ -13,7 +13,7 @@
 	<key>pfm_format_version</key>
 	<integer>1</integer>
 	<key>pfm_last_modified</key>
-	<date>2024-04-07T00:00:00Z</date>
+	<date>2024-04-26T00:00:00Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -127,7 +127,7 @@ A profile can consist of payloads with different version numbers. For example, c
 		</dict>
 		<dict>
 			<key>pfm_description</key>
-			<string>Define scripts that are run immediately as the user logs in.</string>
+			<string>Define scripts that are run immediately as the user logs in, prior to any Baseline SwiftDialog windows. These scripts are the place to add your custom welcome messages or pre-flight scripts.</string>
 			<key>pfm_name</key>
 			<string>InitialScripts</string>
 			<key>pfm_subkeys</key>
@@ -137,7 +137,7 @@ A profile can consist of payloads with different version numbers. For example, c
 					<array>
 						<dict>
 							<key>pfm_description</key>
-							<string>The name you want to appear in the SwiftDialog menu as this script is run.</string>
+							<string>The name you want to appear SwiftDialog and logs. Initial Scripts will only be shown to the user if the item Fails.</string>
 							<key>pfm_name</key>
 							<string>DisplayName</string>
 							<key>pfm_title</key>
@@ -187,7 +187,7 @@ A profile can consist of payloads with different version numbers. For example, c
 		</dict>
 		<dict>
 			<key>pfm_description</key>
-			<string>Define Installomator labels to be run by Baseline.</string>
+			<string>Define Installomator labels to be run by Baseline. For information specific to Installomator, see the Installomator Github: https://github.com/Installomator/Installomator</string>
 			<key>pfm_name</key>
 			<string>Installomator</string>
 			<key>pfm_subkeys</key>
@@ -581,7 +581,7 @@ A profile can consist of payloads with different version numbers. For example, c
 		</dict>
 		<dict>
 			<key>pfm_description</key>
-			<string>This setting controls whether Baseline will reinstall SwiftDialog as the final step before completion. Default behavior if this key is omitted will reinstall SwiftDialog if a custom PNG is found in /Library/Application Support/Dialog/Dialog.png.</string>
+			<string>This setting controls whether Baseline will reinstall SwiftDialog as the final step before completion. Default behavior if this key is omitted will reinstall SwiftDialog if a custom PNG is found in /Library/Application Support/Dialog/Dialog.png. Leave this as default if you use Baseline to deploy a custom SwiftDialog icon. Set to false if you do not want Baseline to ever reinstall SwiftDialog. Set to True if you always want to reinstall SwiftDialog after each Baseline.</string>
 			<key>pfm_name</key>
 			<string>ReinstallDialog</string>
 			<key>pfm_title</key>
@@ -671,7 +671,7 @@ A profile can consist of payloads with different version numbers. For example, c
 		</dict>
 		<dict>
 			<key>pfm_description</key>
-			<string>Define a file or folder path. If this file or folder exists, Baseline will exit quietly without processing any items.</string>
+			<string>Define a file or folder path. When Baseline starts, if this file or folder exists, Baseline will exit quietly without processing any items. Use this option if your management tool may re-send scripts when not desired.</string>
 			<key>pfm_name</key>
 			<string>ExitCondition</string>
 			<key>pfm_title</key>
