--- a/ProfileManifest/com.secondsonconsulting.baseline.plist
+++ b/ProfileManifest/com.secondsonconsulting.baseline.plist
@@ -401,6 +401,16 @@ A profile can consist of payloads with different version numbers. For example, c
 						</dict>
 						<dict>
 							<key>pfm_description</key>
+							<string>Run script in the user context.</string>
+							<key>pfm_name</key>
+							<string>AsUser</string>
+							<key>pfm_title</key>
+							<string>As User</string>
+							<key>pfm_type</key>
+							<string>boolean</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
 							<string>The icon you want to appear in the SwiftDialog menu as this script is run. Can be a URL or local file path.</string>
 							<key>pfm_name</key>
 							<string>Icon</string>
