--- a/ProfileManifest/com.secondsonconsulting.baseline.plist
+++ b/ProfileManifest/com.secondsonconsulting.baseline.plist
@@ -547,6 +547,18 @@ A profile can consist of payloads with different version numbers. For example, c
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
+			<string>This setting controls whether Baseline uses the SwiftDialog --loginwindow feature.</string>
+			<key>pfm_name</key>
+			<string>ShowAtLoginWindow</string>
+			<key>pfm_title</key>
+			<string>Show At Login Window</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
+		</dict>
+		<dict>
+			<key>pfm_default</key>
+			<false/>
+			<key>pfm_description</key>
 			<string>This setting controls whether Baseline displays a progress bar.</string>
 			<key>pfm_name</key>
 			<string>ProgressBar</string>
