--- a/ProfileManifest/com.secondsonconsulting.baseline.plist
+++ b/ProfileManifest/com.secondsonconsulting.baseline.plist
@@ -547,7 +547,7 @@ A profile can consist of payloads with different version numbers. For example, c
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
-			<string>This setting controls whether Baseline uses the SwiftDialog --loginwindow feature.</string>
+			<string>This setting controls whether Baseline uses the SwiftDialog --loginwindow feature. Default is false.</string>
 			<key>pfm_name</key>
 			<string>ShowAtLoginWindow</string>
 			<key>pfm_title</key>
