--- a/ProfileManifest/com.secondsonconsulting.baseline.plist
+++ b/ProfileManifest/com.secondsonconsulting.baseline.plist
@@ -187,6 +187,68 @@ A profile can consist of payloads with different version numbers. For example, c
 		</dict>
 		<dict>
 			<key>pfm_description</key>
+			<string>Define App Catalog titles to be checked by Baseline. Supports both VPP and MDM App Catalogs.</string>
+			<key>pfm_name</key>
+			<string>Catalog</string>
+			<key>pfm_subkeys</key>
+			<array>
+				<dict>
+					<key>pfm_subkeys</key>
+					<array>
+						<dict>
+							<key>pfm_description</key>
+							<string>The name you want to appear in the SwiftDialog menu as this Catalog app is installed.</string>
+							<key>pfm_name</key>
+							<string>DisplayName</string>
+							<key>pfm_title</key>
+							<string>Display Name</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>Optional. An alternative file path to verify installation against.</string>
+							<key>pfm_name</key>
+							<string>AltFilePath</string>
+							<key>pfm_title</key>
+							<string>Alternate File Path</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>The icon you want to appear in the SwiftDialog menu as this Catalog app is installed. Can be a URL or local file path.</string>
+							<key>pfm_name</key>
+							<string>Icon</string>
+							<key>pfm_title</key>
+							<string>Icon</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_app_min</key>
+							<string>2.1</string>
+							<key>pfm_description</key>
+							<string>The subtitle text to appear on this line item.</string>
+							<key>pfm_name</key>
+							<string>Subtitle</string>
+							<key>pfm_title</key>
+							<string>Subtitle</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+					</array>
+					<key>pfm_type</key>
+					<string>dictionary</string>
+				</dict>
+			</array>
+			<key>pfm_title</key>
+			<string>Catalog App Titles</string>
+			<key>pfm_type</key>
+			<string>array</string>
+		</dict>
+		<dict>
+			<key>pfm_description</key>
 			<string>Define Installomator labels to be run by Baseline. For information specific to Installomator, see the Installomator Github: https://github.com/Installomator/Installomator</string>
 			<key>pfm_name</key>
 			<string>Installomator</string>
@@ -254,68 +316,6 @@ A profile can consist of payloads with different version numbers. For example, c
 			</array>
 			<key>pfm_title</key>
 			<string>Installomator Labels</string>
-			<key>pfm_type</key>
-			<string>array</string>
-		</dict>
-		<dict>
-			<key>pfm_description</key>
-			<string>Define App Catalog titles to be checked by Baseline. Supports both VPP and MDM App Catalogs.</string>
-			<key>pfm_name</key>
-			<string>Catalog</string>
-			<key>pfm_subkeys</key>
-			<array>
-				<dict>
-					<key>pfm_subkeys</key>
-					<array>
-						<dict>
-							<key>pfm_description</key>
-							<string>The name you want to appear in the SwiftDialog menu as this Catalog app is installed.</string>
-							<key>pfm_name</key>
-							<string>DisplayName</string>
-							<key>pfm_title</key>
-							<string>Display Name</string>
-							<key>pfm_type</key>
-							<string>string</string>
-						</dict>
-						<dict>
-							<key>pfm_description</key>
-							<string>Optional, alternative file path to verify installation against.</string>
-							<key>pfm_name</key>
-							<string>AltFilePath</string>
-							<key>pfm_title</key>
-							<string>Alternate File Path</string>
-							<key>pfm_type</key>
-							<string>string</string>
-						</dict>
-						<dict>
-							<key>pfm_description</key>
-							<string>The icon you want to appear in the SwiftDialog menu as this Catalog app is installed. Can be a URL or local file path.</string>
-							<key>pfm_name</key>
-							<string>Icon</string>
-							<key>pfm_title</key>
-							<string>Icon</string>
-							<key>pfm_type</key>
-							<string>string</string>
-						</dict>
-						<dict>
-							<key>pfm_app_min</key>
-							<string>2.1</string>
-							<key>pfm_description</key>
-							<string>The subtitle text to appear on this line item.</string>
-							<key>pfm_name</key>
-							<string>Subtitle</string>
-							<key>pfm_title</key>
-							<string>Subtitle</string>
-							<key>pfm_type</key>
-							<string>string</string>
-						</dict>
-					</array>
-					<key>pfm_type</key>
-					<string>dictionary</string>
-				</dict>
-			</array>
-			<key>pfm_title</key>
-			<string>App Catalog Titles</string>
 			<key>pfm_type</key>
 			<string>array</string>
 		</dict>
