--- a/ProfileManifest/com.secondsonconsulting.baseline.plist
+++ b/ProfileManifest/com.secondsonconsulting.baseline.plist
@@ -430,6 +430,8 @@ A profile can consist of payloads with different version numbers. For example, c
 							<string>string</string>
 						</dict>
 						<dict>
+							<key>pfm_default</key>
+							<false/>
 							<key>pfm_description</key>
 							<string>Run script in the user context.</string>
 							<key>pfm_name</key>
