--- a/ProfileManifest/com.secondsonconsulting.baseline.plist
+++ b/ProfileManifest/com.secondsonconsulting.baseline.plist
@@ -557,6 +557,16 @@ A profile can consist of payloads with different version numbers. For example, c
 						</dict>
 						<dict>
 							<key>pfm_description</key>
+							<string>The expected SHA256 of the script being run.</string>
+							<key>pfm_name</key>
+							<string>SHA256</string>
+							<key>pfm_title</key>
+							<string>SHA256</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
 							<string>The expected MD5 of the script being run.</string>
 							<key>pfm_name</key>
 							<string>MD5</string>
