--- a/ProfileManifest/com.secondsonconsulting.baseline.plist
+++ b/ProfileManifest/com.secondsonconsulting.baseline.plist
@@ -185,6 +185,16 @@ A profile can consist of payloads with different version numbers. For example, c
 							<key>pfm_type</key>
 							<string>string</string>
 						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>Enable this option to run the script as the logged in user.</string>
+							<key>pfm_name</key>
+							<string>AsUser</string>
+							<key>pfm_title</key>
+							<string>Run as User</string>
+							<key>pfm_type</key>
+							<string>boolean</string>
+						</dict>
 					</array>
 					<key>pfm_type</key>
 					<string>dictionary</string>
@@ -431,6 +441,16 @@ A profile can consist of payloads with different version numbers. For example, c
 						</dict>
 						<dict>
 							<key>pfm_description</key>
+							<string>Enable this option to run the script as the logged in user.</string>
+							<key>pfm_name</key>
+							<string>AsUser</string>
+							<key>pfm_title</key>
+							<string>Run as User</string>
+							<key>pfm_type</key>
+							<string>boolean</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
 							<string>The icon you want to appear in the SwiftDialog menu as this script is run. Can be a URL or local file path.</string>
 							<key>pfm_name</key>
 							<string>Icon</string>
@@ -585,6 +605,16 @@ A profile can consist of payloads with different version numbers. For example, c
 							<key>pfm_type</key>
 							<string>string</string>
 						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>Enable this option to run the script as the logged in user.</string>
+							<key>pfm_name</key>
+							<string>AsUser</string>
+							<key>pfm_title</key>
+							<string>Run as User</string>
+							<key>pfm_type</key>
+							<string>boolean</string>
+						</dict>
 					</array>
 					<key>pfm_type</key>
 					<string>dictionary</string>
@@ -681,7 +711,7 @@ A profile can consist of payloads with different version numbers. For example, c
 		</dict>
 		<dict>
 			<key>pfm_description</key>
-			<string>This setting controls whether Baseline will reinstall SwiftDialog as the final step before completion. Default behavior if this key is omitted will reinstall SwiftDialog if a custom PNG is found in /Library/Application Support/Dialog/Dialog.png. Leave this as default if you use Baseline to deploy a custom SwiftDialog icon. Set to false if you do not want Baseline to ever reinstall SwiftDialog. Set to True if you always want to reinstall SwiftDialog after each Baseline.</string>
+			<string>Deprecated: This feature was removed in v.2.3, as it is no longer needed. This setting controls whether Baseline will reinstall SwiftDialog as the final step before completion. Default behavior if this key is omitted will reinstall SwiftDialog if a custom PNG is found in /Library/Application Support/Dialog/Dialog.png. Leave this as default if you use Baseline to deploy a custom SwiftDialog icon. Set to false if you do not want Baseline to ever reinstall SwiftDialog. Set to True if you always want to reinstall SwiftDialog after each Baseline.</string>
 			<key>pfm_name</key>
 			<string>ReinstallDialog</string>
 			<key>pfm_title</key>
