--- a/ProfileManifest/com.secondsonconsulting.baseline.plist
+++ b/ProfileManifest/com.secondsonconsulting.baseline.plist
@@ -547,7 +547,7 @@ A profile can consist of payloads with different version numbers. For example, c
 		</dict>
 		<dict>
 			<key>pfm_description</key>
-			<string>Define scripts that are run just before completion dialogs. For reporting webhooks, cleanup tasks, etc.</string>
+			<string>Define scripts that are run just before completion dialogs. For reporting webhooks, cleanup tasks, etc. Similar to InitialScripts, these items do not appear on the List View.</string>
 			<key>pfm_name</key>
 			<string>FinalScripts</string>
 			<key>pfm_subkeys</key>
@@ -769,6 +769,20 @@ A profile can consist of payloads with different version numbers. For example, c
 			<key>pfm_type</key>
 			<string>boolean</string>
 		</dict>
+        <dict>
+            <key>pfm_app_min</key>
+            <string>2.3</string>
+            <key>pfm_default</key>
+            <false/>
+            <key>pfm_description</key>
+            <string>If set to true, Baseline will close the list view window before running FinalScripts. Use this option if you want to utilize FinalScripts to have the user complete actions prior to the Baseline completion dialog.</string>
+            <key>pfm_name</key>
+            <string>CloseListBeforeFinalScripts</string>
+            <key>pfm_title</key>
+            <string>Close List View Before Final Scripts</string>
+            <key>pfm_type</key>
+            <string>boolean</string>
+        </dict>
 		<dict>
 			<key>pfm_description</key>
 			<string>SwiftDialog options for the primary Baseline progress list window.</string>
